--- a/index.html
+++ b/index.html
@@ -3,8 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Dashboard</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">ADMIN Dash</a>
+          <div class="float-right" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Settings</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Login</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div class="main-section">
+        <div id="box" class="menu">
+          <div class="search">
+            <form class="form-inline">
+              <div class="input-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Search..."
+                  aria-label="Username"
+                  aria-describedby="basic-addon1"
+                />
+              </div>
+            </form>
+          </div>
+          <div class="menu-item">
+            <h1>Dashboard</h1>
+            <ul>
+              <li class="item">Components</li>
+              <li class="item">Utilities</li>
+              <li class="item">Pages</li>
+              <li class="item">Forms</li>
+              <li class="item">Tables</li>
+            </ul>
+          </div>
+        </div>
+        <div id="box" class="info"></div>
+      </div>
+    </div>
+  </body>
 </html>
