info-dash section setup and styled

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
       </nav>
       <div class="main-section">
-        <div id="box" class="menu">
+        <div id="box" class="menu col-lg-4">
           <div class="search">
             <form class="form-inline">
               <div class="input-group">
@@ -58,7 +58,44 @@
             </ul>
           </div>
         </div>
-        <div id="box" class="info"></div>
+        <div id="box" class="info col-lg-8">
+          <h1>Information Dash</h1>
+          <hr />
+          <div class="info-items">
+            <div class="menu-items">
+              <div class="card">
+                <div class="card-body">
+                  <h3 class="card-title text-center">New Orders</h3>
+                </div>
+                <a href="#" class="btn btn-primary">See All</a>
+              </div>
+            </div>
+            <div class="info-items">
+              <div class="card">
+                <div class="card-body">
+                  <h3 class="card-title text-center">New Users</h3>
+                </div>
+                <a href="#" class="btn btn-primary">See All</a>
+              </div>
+            </div>
+            <div class="info-items">
+              <div class="card">
+                <div class="card-body">
+                  <h3 class="card-title text-center">New Comment</h3>
+                </div>
+                <a href="#" class="btn btn-primary">See All</a>
+              </div>
+            </div>
+            <div class="info-items">
+              <div class="card">
+                <div class="card-body">
+                  <h3 class="card-title text-center">Support Tickets</h3>
+                </div>
+                <a href="#" class="btn btn-primary">See All</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
