--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h1>Information Dash</h1>
           <hr />
           <div class="info-items">
-            <div class="menu-items">
+            <div class="info-items">
               <div class="card">
                 <div class="card-body">
                   <h3 class="card-title text-center">New Orders</h3>
@@ -92,6 +92,163 @@
                   <h3 class="card-title text-center">Support Tickets</h3>
                 </div>
                 <a href="#" class="btn btn-primary">See All</a>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="charts">
+            <div class="chart-items">
+              <div id="part-1">
+                <div class="item col-lg-6">
+                  <div class="headline">
+                    <h3>Sales Report</h3>
+                  </div>
+                  <div class="chart-info">
+                    <table class="table">
+                      <thead>
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">First</th>
+                          <th scope="col">Second</th>
+                          <th scope="col">Third</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">Hadi</th>
+                          <td>Bike</td>
+                          <td>Laptop</td>
+                          <td>Phone</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">Ben</th>
+                          <td>Charger</td>
+                          <td>Pen</td>
+                          <td>Shoes</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">John</th>
+                          <td>Headphone</td>
+                          <td>Mouse</td>
+                          <td>Keyboard</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <div class="item col-lg-6">
+                  <div class="headline">
+                    <h3>Resent Orders</h3>
+                  </div>
+                  <div class="chart-info">
+                    <table class="table">
+                      <thead>
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">First</th>
+                          <th scope="col">Second</th>
+                          <th scope="col">Third</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">Hadi</th>
+                          <td>Bike</td>
+                          <td>Laptop</td>
+                          <td>Phone</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">Ben</th>
+                          <td>Charger</td>
+                          <td>Pen</td>
+                          <td>Shoes</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">John</th>
+                          <td>Headphone</td>
+                          <td>Mouse</td>
+                          <td>Keyboard</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+              <div id="part-2">
+                <div class="item col-lg-6">
+                  <div class="headline">
+                    <h3>Recent User</h3>
+                  </div>
+                  <div class="chart-info">
+                    <table class="table">
+                      <thead>
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">First</th>
+                          <th scope="col">Second</th>
+                          <th scope="col">Third</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">Hadi</th>
+                          <td>Bike</td>
+                          <td>Laptop</td>
+                          <td>Phone</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">Ben</th>
+                          <td>Charger</td>
+                          <td>Pen</td>
+                          <td>Shoes</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">John</th>
+                          <td>Headphone</td>
+                          <td>Mouse</td>
+                          <td>Keyboard</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <div class="item col-lg-6">
+                  <div class="headline">
+                    <h3>Recent Comment</h3>
+                  </div>
+                  <div class="chart-info">
+                    <table class="table">
+                      <thead>
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">First</th>
+                          <th scope="col">Second</th>
+                          <th scope="col">Third</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">Hadi</th>
+                          <td>Bike</td>
+                          <td>Laptop</td>
+                          <td>Phone</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">Ben</th>
+                          <td>Charger</td>
+                          <td>Pen</td>
+                          <td>Shoes</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">John</th>
+                          <td>Headphone</td>
+                          <td>Mouse</td>
+                          <td>Keyboard</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
