recent comment updated

--- a/index.html
+++ b/index.html
@@ -107,18 +107,18 @@
                     <table class="table">
                       <thead>
                         <tr>
-                          <th scope="col">#</th>
-                          <th scope="col">First</th>
-                          <th scope="col">Second</th>
-                          <th scope="col">Third</th>
+                          <th scope="col">Item</th>
+                          <th scope="col">March</th>
+                          <th scope="col">April</th>
+                          <th scope="col">May</th>
                         </tr>
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">Hadi</th>
-                          <td>Bike</td>
-                          <td>Laptop</td>
-                          <td>Phone</td>
+                          <th scope="row">Laptop</th>
+                          <td>-30%</td>
+                          <td>+10%</td>
+                          <td>+18%</td>
                         </tr>
                         <tr>
                           <th scope="row">Ben</th>
@@ -144,10 +144,10 @@
                     <table class="table">
                       <thead>
                         <tr>
-                          <th scope="col">#</th>
-                          <th scope="col">First</th>
-                          <th scope="col">Second</th>
-                          <th scope="col">Third</th>
+                          <th scope="col">Name</th>
+                          <th scope="col">Item 1</th>
+                          <th scope="col">Item 2</th>
+                          <th scope="col">Item 3</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -183,30 +183,30 @@
                     <table class="table">
                       <thead>
                         <tr>
-                          <th scope="col">#</th>
-                          <th scope="col">First</th>
-                          <th scope="col">Second</th>
-                          <th scope="col">Third</th>
+                          <th scope="col">Name</th>
+                          <th scope="col">Age</th>
+                          <th scope="col">Skill</th>
+                          <th scope="col">Phone</th>
                         </tr>
                       </thead>
                       <tbody>
                         <tr>
                           <th scope="row">Hadi</th>
-                          <td>Bike</td>
-                          <td>Laptop</td>
-                          <td>Phone</td>
+                          <td>N/A</td>
+                          <td>Software</td>
+                          <td>555555</td>
                         </tr>
                         <tr>
                           <th scope="row">Ben</th>
-                          <td>Charger</td>
-                          <td>Pen</td>
-                          <td>Shoes</td>
+                          <td>24</td>
+                          <td>Biking</td>
+                          <td>888888</td>
                         </tr>
                         <tr>
                           <th scope="row">John</th>
-                          <td>Headphone</td>
-                          <td>Mouse</td>
-                          <td>Keyboard</td>
+                          <td>28</td>
+                          <td>Math</td>
+                          <td>777777</td>
                         </tr>
                       </tbody>
                     </table>
@@ -216,37 +216,12 @@
                   <div class="headline">
                     <h3>Recent Comment</h3>
                   </div>
-                  <div class="chart-info">
-                    <table class="table">
-                      <thead>
-                        <tr>
-                          <th scope="col">#</th>
-                          <th scope="col">First</th>
-                          <th scope="col">Second</th>
-                          <th scope="col">Third</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <th scope="row">Hadi</th>
-                          <td>Bike</td>
-                          <td>Laptop</td>
-                          <td>Phone</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Ben</th>
-                          <td>Charger</td>
-                          <td>Pen</td>
-                          <td>Shoes</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">John</th>
-                          <td>Headphone</td>
-                          <td>Mouse</td>
-                          <td>Keyboard</td>
-                        </tr>
-                      </tbody>
-                    </table>
+                  <ul class="list-group">
+                    <li class="list-group-item">Comment number one</li>
+                    <li class="list-group-item">Comment number two</li>
+                    <li class="list-group-item">Comment number three</li>
+                    <li class="list-group-item">Comment number four</li>
+                  </ul>
                   </div>
                 </div>
               </div>
