html file updated

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="charts">
             <div class="chart-items">
               <div id="part-1">
-                <div class="item col-lg-6">
+                <div class="item col-xs-12 col-sm-12 col-lg-6 ">
                   <div class="headline">
                     <h3>Sales Report</h3>
                   </div>
@@ -136,7 +136,7 @@
                     </table>
                   </div>
                 </div>
-                <div class="item col-lg-6">
+                <div class="item col-xs-12 col-sm-12 col-lg-6">
                   <div class="headline">
                     <h3>Resent Orders</h3>
                   </div>
@@ -175,7 +175,7 @@
                 </div>
               </div>
               <div id="part-2">
-                <div class="item col-lg-6">
+                <div class="item col-xs-12 col-sm-12 col-lg-6">
                   <div class="headline">
                     <h3>Recent User</h3>
                   </div>
@@ -212,7 +212,7 @@
                     </table>
                   </div>
                 </div>
-                <div class="item col-lg-6">
+                <div class="item col-xs-12 col-sm-12 col-lg-6">
                   <div class="headline">
                     <h3>Recent Comment</h3>
                   </div>
